<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBF5F2"
    android:orientation="vertical"
    android:padding="16dp">


    <!--    BACK BUTTON-->
    <ImageView
        android:id="@+id/backTeacherImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:src="@drawable/back_arrow"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"

        android:textSize="30dp"
        android:textColor="@color/yellow_200"


        android:fontFamily="@font/poppins_bold"
        android:text="Hello !" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="261dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="125dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Welcome Back"
        android:textColor="@color/yellow_200"
        android:textSize="30dp" />

<!--    <EditText-->
<!--        android:id="@+id/email"-->
<!--        android:layout_width="338dp"-->
<!--        android:layout_height="78dp"-->
<!--        android:autofillHints="emailAddress"-->
<!--        android:hint="@string/email"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:translationY="200dp" />-->

<!--    <EditText-->
<!--        android:id="@+id/password"-->
<!--        android:layout_width="340dp"-->
<!--        android:layout_height="76dp"-->
<!--        android:autofillHints="password"-->
<!--        android:hint="@string/password"-->
<!--        android:inputType="textPassword"-->
<!--        android:translationY="300dp" />-->


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"



        android:layout_marginTop="200dp"

        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLength="30"
            android:textColor="#778293"


            />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"



        android:layout_marginTop="280dp"

        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="#778293"
            android:hint="@string/password"
            android:maxLength="16"
            android:inputType="textPassword"





            />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:text="Forget Password?"
        android:id="@+id/forgetPassView"
        android:layout_marginLeft="130dp"
        android:textSize="12dp"
        android:fontFamily="@font/poppins_regular"
        />


    <androidx.appcompat.widget.AppCompatButton
        style="@android:style/Widget.Button"
        android:id="@+id/loginButton"
        android:layout_width="198dp"
        android:layout_height="50dp"
        android:background="@drawable/round_btn"
        android:fontFamily="@font/poppin_semibold"
        android:text="@string/login"
        android:textSize="17dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="390dp"
         />




<!--    <Button-->
<!--        android:id="@+id/goToSignUpButton"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/sign_up"-->
<!--        android:translationY="600dp" />-->




</androidx.coordinatorlayout.widget.CoordinatorLayout>
