<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBF5F2">

    <!--    BOTTOM NAV-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:background="@color/yellow_200"
        android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/ivBackArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/back_arrow"  />

        <TextView
            android:id="@+id/tvAdminsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Users"
            android:fontFamily="@font/poppins_bold"
            android:textSize="17dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="2dp" />

    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/yellow_200"-->
<!--        android:orientation="vertical"-->
<!--        android:padding="16dp">-->

<!--        <ImageView-->
<!--            android:id="@+id/ivBackArrow"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:src="@drawable/back_arrow"  />-->

<!--        <TextView-->
<!--            android:id="@+id/tvAdminsHeader"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:layout_marginStart="40dp"-->
<!--            android:layout_marginTop="0dp"-->
<!--            android:fontFamily="@font/poppins_bold"-->
<!--            android:text="Users"-->
<!--            android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
<!--            android:textSize="16sp" />-->

<!--    </LinearLayout>-->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp">

        <!-- This is the layout for the custom button for admins, parents, teachers -->

        <LinearLayout
            android:id="@+id/addNewUser"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_button_background"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="80dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/add_users"
                android:textColor="@android:color/black"
                android:textSize="17dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/manageAdmins"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.172">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/teacher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="30dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="40dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/manage_admins"

                android:textSize="17dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/forward_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/manageParents"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.295">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/teacher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="30dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="40dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/manage_parents"

                android:textSize="17dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/forward_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/manageTeachers"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.42">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/teacher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="30dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="40dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/manage_teachers"

                android:textSize="17dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/forward_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/manageChildren"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.544">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/teacher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="30dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="40dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/manage_children"

                android:textSize="17dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/forward_arrow" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="300dp">



    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="10dp"
        app:fabCradleVerticalOffset="10dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@drawable/transparent_background"
            app:menu="@menu/bottom_nav_menu" />

    </com.google.android.material.bottomappbar.BottomAppBar>


    <!--    </ScrollView>-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>