<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBF5F2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/yellow_200">

<!--                USER IMAGE-->
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.313"
                     />

                <TextView
                    android:id="@+id/greetingTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="105dp"
                    android:layout_marginTop="175dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="125dp"
                    android:layout_marginTop="195dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/logoutImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="350dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/baseline_logout_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </TextView>
            </LinearLayout>

        </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp">

        <!-- This is the layout for the custom button for kids activities -->


        <!-- This is the layout for the custom button for Invoice and payments -->

        <!-- This is the layout for the custom button for Message and Notifications -->

        <!-- This is the layout for the custom button for Message and Notifications -->

        <LinearLayout
            android:id="@+id/waterplayccontainer"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.172">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/kidsactivities" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="30dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="40dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/kids_activities"

                android:textSize="17dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/forward_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/messageButton"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="30dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="40dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/messagenotif"

                android:textSize="17dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/forward_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/invoiceButton"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.467">




            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/invoicepayment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="30dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="40dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/invoicepayments"

                android:textSize="17dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/forward_arrow" />
        </LinearLayout>




        <LinearLayout
            android:id="@+id/adminButton"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.467">




            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/invoicepayment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="30dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="40dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="Manage Accounts"

                android:textSize="17dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/forward_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teacherButton"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.616">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/teacher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="30dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="40dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/teacherincharge"

                android:textSize="17dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/forward_arrow" />
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="300dp">



    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="bottom"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="10dp"
        app:fabCradleVerticalOffset="10dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@drawable/transparent_background"
            app:menu="@menu/bottom_nav_menu" />

    </com.google.android.material.bottomappbar.BottomAppBar>


    <!--    </ScrollView>-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>